<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="divya_gupta">Divya Gupta</string>
    <string name="my_image">my image</string>
    <string name="divagupta2392_gmail_com">divagupta2392@gmail.com</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent_mail">Sent Mail</string>
    <string name="drafts">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="all_mail">All mail</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
</resources>
