<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item android:title="@string/inbox"
            android:id="@+id/inbox_id"
            android:icon="@mipmap/ic_launcher"/>

        <item android:title="@string/starred"
            android:id="@+id/starred_id"
            android:icon="@mipmap/ic_launcher"/>

        <item android:title="@string/sent_mail"
            android:id="@+id/sent_mail_id"
            android:icon="@mipmap/ic_launcher"/>

        <item android:title="@string/drafts"
            android:id="@+id/drafts_id"
            android:icon="@mipmap/ic_launcher"/>

    </group>

    <item android:title="@string/subheader">

        <menu>

           <item android:title="@string/all_mail"
               android:id="@+id/allmail_id"
               android:icon="@mipmap/ic_launcher"/>

            <item android:title="@string/trash"
                android:id="@+id/trashl_id"
                android:icon="@mipmap/ic_launcher"/>

            <item android:title="@string/spam"
                android:id="@+id/spam_id"
                android:icon="@mipmap/ic_launcher"/>

        </menu>

    </item>



</menu>